2004-05-03  Al Riddoch  <alriddoch@zepler.org>

* Eris/TypeService.cpp: Fix a type in an error message.

* Eris/TypeInfo.cpp: Fix illegal taking reference from function returning
  by value, and add checks to make sure type is never made a child of itself.

* Eris/PollDefault.cpp: Add try/catch pair to ensure that already_polling
  is exception safe.

* Eris/Player.cpp: Print a warning if Player gets an Info(Character) op
  but can't decode the character.

* Eris/Connection.cpp: Check ops are valid before queueing them.

2004-05-02  James Turner  <james@worldforge.org>

* Fix autobuild warnings in tests

* Fix logout behaviour, many dumb bugs lurking around. Much better now,
  but still needs better testing.
  
* Added IG module to tests, including a simple character activation tests.
  This entailed adding trivial agents to each client connection.
  
* Huge number of bug fixes in View, Entity and Avatar. A decent percentage
  of View related functionality seems to be working.

2004-05-02  James Turner <james@worldforge.org>

* Fix Account creation (well, workaround the Atlas Objects bug)

* Supress the 'no router for TO' warning if there are no TO routers
  registered in Connection::dispatchOp, avoids sily warnings on login

* Add a bunch more test cases, and stub server code to support them. Notably
  client disconnection is now handled and cleaned up.

2004-05-01  James Turner <james@worldforge.org>

* Bring builtin definition of core atlas types back from the dead,
  helps to reduce initial server ganking.

2004-05-01  James Turner <james@worldforge.org>

* Update the MetaServer API to support in-place inspection of server
  info objects. Also rename various signals to be clearer, and give each
  ServerInfo a status field, to aid in displaying nice UI in clients.
  
* Update the metaQuery tool to the new API

* Add an InGame signal to Avatar, analagous to the old World::Entered signal;
  various changes to View and Player to support this.
