@@ -1,3 +1,14 @@
+2004-05-03  James Turner  <james@worldforge.org>
+
+* Add an EntitySeen signal to View, fired whenever a new Entity instance
+  is created.
+  
+* Make View available off Avatar immediately
+
+* Chnage handling of the limbo flag on Entity
+
+* Fix warning causing autobuild failure
+
 2004-05-03  Al Riddoch  <alriddoch@zepler.org>
 
 * Eris/TypeService.cpp: Fix a type in an error message.
